MO2-320 - Account Module pages, owl logo truncated in IE. Fixed

--- a/src/_form-control.scss
+++ b/src/_form-control.scss
@@ -768,7 +768,7 @@ input::placeholder {
 
   .signup-wrapper__header-icon {
     width: 30%;
-    /* height: 30%; */
+    height: 100%;
     display:block;
 
     @include allmobiles {
